# cnllm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_en.md  LICENSE  README.md  README_en.md  SKILL.md  example.py  pyproject.toml  requirements.txt  test_CNLLM.py  test_e2e_think.py  test_minimax.py  test_stoperror_report.md  test_stream_props.py  test_support_langchain.py  test_think_accumulation.py
.github/workflows/: publish.yml  release.yml  test.yml
cnllm/: __init__.py  client.py  example.py  params.py
cnllm/adapters/framework/: __init__.py  langchain.py
cnllm/adapters/minimax/: chat.py
cnllm/core/: __init__.py  adapter.py  base.py  client.py  config.py  embedding.py  exceptions.py  models.py  param_registry.py  params.py  responder.py  types.py
cnllm/core/accumulators/: __init__.py  base.py  batch_accumulator.py  embedding_accumulator.py  single_accumulator.py
cnllm/core/framework/: __init__.py  langchain.py
cnllm/entry/: __init__.py  async_client.py  batch.py  client.py  client.py.bak.004  http.py
cnllm/utils/: accumulator.py  batch.py  cleaner.py  exceptions.py  fallback.py  stream.py  validate_model_compatible.py  validator.py  vendor_error.py
cnllm/utils/scheduler/: __init__.py  base.py  chat.py  embedding.py
configs/baidu/: request_baidu.yaml  response_baidu.yaml
configs/deepseek/: request_deepseek.yaml  response_deepseek.yaml
configs/doubao/: request_doubao.yaml  response_doubao.yaml
configs/glm/: request_glm.yaml  response_glm.yaml
configs/hunyuan/: request_hunyuan.yaml  response_hunyuan.yaml
configs/kimi/: request_kimi.yaml  response_kimi.yaml
configs/minimax/: request_minimax.yaml  response_minimax.yaml
configs/qwen/: request_qwen.yaml  response_qwen.yaml
configs/xiaomi/: request_xiaomi.yaml  response_xiaomi.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_en.md  CONTRIBUTOR.md  CONTRIBUTOR_en.md
docs/feature/: async.md  batch.md  embedding.md
intro_test/: test_adapter_payload.py
intro_test/key_needed/: test_openai_format.py
scripts/: test_e2e_installed.py  validate_model_compatible.py
test/: test_CNLLM.py  test_exceptions.py  test_extra_config.py  test_fallback.py  test_langchain_mock.py  test_minimax.py  test_model_selection.py  test_params.py  test_params_tunnel.py  test_v0_3_system.py
test/system/: test_integration.py
test/unit/: test_exceptions.py  test_langchain_runnable.py  test_minimax_adapter.py  test_param_merge.py  test_params_validation.py  test_required_validation.py  test_sensitive_check.py  test_standard_format.py  test_stream_accumulator.py  test_stream_handler.py  test_think.py  test_tools_property.py  test_xiaomi.py  test_xiaomi_fields.py
tests/: conftest.py  debug_mixed_stream.py  debug_usage_accumulation.py  test_adapter_config.py  test_adapter_payload.py  test_batch_normalization.py  test_build_url.py  test_e2e.py  test_embedding_iter_fields.py  test_embedding_response_unit.py  test_keep_param.py  test_langchain_runnable.py  test_mixed_batch_callbacks.py  test_param_changes.py  test_param_registry.py  test_param_validation.py  test_responder_format.py  test_responder_reasoning.py  test_retry_params.py  test_scheduler_params.py  test_status_field.py  test_stream.py  test_stream_accumulator_accumulate.py  test_yaml_request.py  test_yaml_response.py
tests/deepseek/: test_deepseek_adapter_config.py  test_deepseek_adapter_payload.py  test_deepseek_langchain_runnable.py  test_deepseek_responder_format.py  test_deepseek_responder_reasoning.py  test_deepseek_stream.py  test_deepseek_yaml_request.py  test_deepseek_yaml_response.py
tests/framework/: test_autogen.py  test_deepeval.py  test_haystack.py  test_langchain.py
tests/key_needed/: test_async_mixed_batch_repr.py  test_baidu_e2e.py  test_batch_embedding_usage_e2e.py  test_batch_fields_e2e.py  test_batch_properties_manual.py  test_batch_requests_e2e.py  test_batch_usage_realtime_e2e.py  test_chat_batch_comprehensive.py  test_client.py  test_custom_ids.py  test_e2e_params.py  test_e2e_status.py  test_embedding_batch_e2e.py  test_embedding_comprehensive_e2e.py  test_fallback_model_logic.py  test_field_accumulation.py  test_hunyuan_e2e.py  test_keep_param_e2e.py  test_langchain_e2e.py  test_langchain_runnable.py  test_mixed_stream_thinking_e2e.py  test_openai_format.py  test_param_arch_e2e.py  test_qwen_e2e.py  test_stoperror.py  test_stream_accumulator.py  test_stream_usage.py  test_streaming_realtime_manual.py  test_streaming_repr_e2e.py  test_url_e2e.py  test_vendor_error.py  test_vision.py
tests/key_needed/doubao_tests/: test_streaming.py  test_thinking_levels.py  test_vendor_specific_params.py
tests/key_needed/framework/: test_llamaindex.py
tests/key_needed/glm_tests/: test_glm_adapter.py  test_glm_all_models_full.py  test_glm_client.py  test_glm_mapped_params.py  test_glm_native_params.py  test_glm_openai_format.py
