[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnllm"
version = "0.7.0"
description = "中文大模型适配库，将 API 响应封装为 OpenAI 标准，无缝协作 LangChain、LlamaIndex、LiteLLM 等机器学习框架"
readme = "README.md"
license = "MIT"
authors = [
    {name = "kanchengw", email = "wangkancheng1122@163.com"}
]
keywords = ["ai", "llm", "openai", "langchain", "minimax", "chinese-llm", "adapter", "doubao", "kimi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=0.19.0",
    "langchain-core>=0.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kanchengw/cnllm"
Documentation = "https://github.com/kanchengw/cnllm#readme"
Repository = "https://github.com/kanchengw/cnllm"
Issues = "https://github.com/kanchengw/cnllm/issues"

[tool.pytest.ini_options]
console_output_style = "classic"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["cnllm*"]
